[project]
name = "kg-normes-transport"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "protobuf>=6.31.1",
    "requests>=2.32.3",
    "sentencepiece>=0.2.0",
    "torch>=2.7.1",
    "transformers>=4.52.4",
    "unsloth>=2024.8",
]
